In MacSVGDocument.xib, added a couple of text labels to the H.264 video export window to note the preferred width and height rules for the video output.
Fixed label sizing issues in some plugin project XIBs.

Improved the coverage in AnimationTimelineView for event-based animation elements, when the event referenced for another animation element contains multiple time values, typically an absolute time event and an event-based event.

--- a/MacSVG Plugin Projects/macSVG Plugins/AnimateElementEditor/AnimateElementEditor/AnimateElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/AnimateElementEditor/AnimateElementEditor/AnimateElementEditor.xib
@@ -322,7 +322,7 @@
                                             </textField>
                                             <textField verticalHuggingPriority="750" misplaced="YES" id="F8c-dy-Mfr">
                                                 <rect key="frame" x="50" y="56" width="173" height="19"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="100" drawsBackground="YES" id="fNw-Mh-wyn">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -340,7 +340,7 @@
                                             </textField>
                                             <textField verticalHuggingPriority="750" misplaced="YES" id="KGo-hM-gep">
                                                 <rect key="frame" x="50" y="94" width="173" height="19"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="50" drawsBackground="YES" id="cL0-88-BlB">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
