--- a/MacSVG Plugin Projects/macSVG Plugins/AnimateMotionElementEditor/AnimateMotionElementEditor/en.lproj/AnimateMotionElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/AnimateMotionElementEditor/AnimateMotionElementEditor/en.lproj/AnimateMotionElementEditor.xib
@@ -160,7 +160,7 @@
                                             </textField>
                                             <textField verticalHuggingPriority="750" misplaced="YES" id="tTC-TH-WJs">
                                                 <rect key="frame" x="50" y="89" width="157" height="19"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="50" drawsBackground="YES" id="zX2-1B-VWu">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -178,7 +178,7 @@
                                             </textField>
                                             <textField verticalHuggingPriority="750" misplaced="YES" id="P1d-gq-LpC">
                                                 <rect key="frame" x="50" y="55" width="157" height="19"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="100" drawsBackground="YES" id="kBA-82-w13">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
