--- a/MacSVG Plugin Projects/macSVG Plugins/AnimateTransformElementEditor/AnimateTransformElementEditor/AnimateTransformElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/AnimateTransformElementEditor/AnimateTransformElementEditor/AnimateTransformElementEditor.xib
@@ -319,7 +319,7 @@
                                             </textField>
                                             <textField verticalHuggingPriority="750" misplaced="YES" id="4k5-60-9dU">
                                                 <rect key="frame" x="50" y="89" width="173" height="19"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="50" drawsBackground="YES" id="AV0-Zc-8kE">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -337,7 +337,7 @@
                                             </textField>
                                             <textField verticalHuggingPriority="750" misplaced="YES" id="uKf-C4-VMm">
                                                 <rect key="frame" x="50" y="56" width="173" height="19"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="100" drawsBackground="YES" id="qeY-3U-Btj">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
